# p3_deployment

./: .gitignore  Cargo.toml
doc/: crates.js  search-index.js  source-files.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/sqlx_core/from_row/: trait.FromRow.js
doc/p3_backend/: fn.main.html  sidebar-items.js
doc/p3_backend/models/: index.html  sidebar-items.js
doc/p3_backend/models/employee/: struct.FromRequestError.html  struct.put_employees.html  struct.user_from_token.html
doc/p3_backend/models/helpers/: fn.make_connection_pool.html  index.html
doc/p3_backend/models/ingredients/: struct.Excess.html  struct.get_excess.html  struct.get_ingredients.html  struct.get_restock.html  struct.put_ingredients.html
doc/p3_backend/models/menu_item/: fn.get_menu_items.html  fn.translate_menu_item.html  index.html  struct.get_menu.html  struct.get_menu_translated.html
doc/p3_backend/models/sale/: index.html  struct.ItemSale.html  struct.get_sales.html  struct.get_sales_by_item.html  struct.post_sales.html
doc/p3_backend/models/translate/: fn.translate.html  index.html  sidebar-items.js
doc/src/p3_backend/models/: employee.rs.html  helpers.rs.html  ingredients.rs.html  sale.rs.html  translate.rs.html
docs/: settings.html
docs/p3_backend/: all.html  index.html
docs/src/p3_backend/: main.rs.html
src/: main.rs
src/models/: employee.rs  helpers.rs  ingredients.rs  menu_item.rs  mod.rs  sale.rs  translate.rs
(+30 files in other folders)
